fix wrap on the long lists of contributors

--- a/web/themes/custom/asulib_barrio/scss/style.scss
+++ b/web/themes/custom/asulib_barrio/scss/style.scss
@@ -159,7 +159,7 @@ article:not(.node--view-mode-full-metadata) .inline-list, .field--name-field-cop
   padding: 0;
 }
 
-.field:not(.field--name-field-note-para) .inline-list li {
+.field:not(.field--name-field-note-para):not(.field--name-field-linked-agent) .inline-list li {
   display: block;
 }
 
